--- a/UnityProject/Assets/Assets.asmdef
+++ b/UnityProject/Assets/Assets.asmdef
@@ -1,3 +1,14 @@
-﻿{
-	"name": "Assets"
+{
+    "name": "Assets",
+    "references": [
+        "Unity.TextMeshPro"
+    ],
+    "optionalUnityReferences": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": []
 }
